@@ -1,11 +1,11 @@
 package my.proj.task.tracker.core.project.web;
 
 import lombok.RequiredArgsConstructor;
+import my.proj.task.tracker.helpers.ControllerHelper;
 import my.proj.task.tracker.core.project.Project;
 import my.proj.task.tracker.core.project.ProjectRepo;
 import my.proj.task.tracker.core.project.converter.ProjectToProjectViewConverter;
 import my.proj.task.tracker.error.BadRequestException;
-import my.proj.task.tracker.error.NotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
@@ -17,24 +17,26 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RequiredArgsConstructor
+@Transactional
 @RestController
 public class ProjectController {
 
     private final ProjectRepo projectRepo;
+
     private final ProjectToProjectViewConverter projectToProjectViewConverter;
 
+    private final ControllerHelper controllerHelper;
+
     public static final String FETCH_PROJECTS = "/api/projects";
+    public static final String CREATE_OR_UPDATE_PROJECT = "/api/projects";
     public static final String DELETE_PROJECT = "/api/projects/{project_id}";
 
-    public static final String CREATE_OR_UPDATE_PROJECT = "/api/projects";
-
     @GetMapping(FETCH_PROJECTS)
-    @Transactional
     public List<ProjectView> fetchProjects(
             @RequestParam(value = "prefix_name", required = false) Optional<String> optionalPrefixName) {
 
         // проверяем фильтр на пустоту (если пустой - optionalPrefixName будет пустым)
-        optionalPrefixName = optionalPrefixName.filter(prefixName -> !prefixName.trim().isEmpty());
+        optionalPrefixName = optionalPrefixName.filter(prefixName -> !prefixName.isBlank());
 
         Stream<Project> projectStream = optionalPrefixName
                 .map(projectRepo::streamAllByNameStartsWithIgnoreCase)
@@ -50,7 +52,7 @@ public class ProjectController {
             @RequestParam(value = "project_id", required = false) Optional<Long> optionalProjectId,
             @RequestParam(value = "project_name") String projectName) {
 
-        if (projectName.trim().isEmpty()) {
+        if (projectName.isBlank()) {
             throw new BadRequestException("Name can't be empty");
         }
 
@@ -73,7 +75,7 @@ public class ProjectController {
             );
         }
         else {
-            project = getProjectOrThrowException(optionalProjectId.get());
+            project = controllerHelper.getProjectOrThrowException(optionalProjectId.get());
 
             projectRepo
                     .findByName(projectName)
@@ -92,17 +94,9 @@ public class ProjectController {
     @DeleteMapping(DELETE_PROJECT)
     public Boolean deleteProject(@PathVariable("project_id") Long projectId) {
 
-        getProjectOrThrowException(projectId);
+        controllerHelper.getProjectOrThrowException(projectId);
         projectRepo.deleteById(projectId);
 
         return true;
-    }
-
-    private Project getProjectOrThrowException(Long projectId) {
-        return projectRepo
-                .findById(projectId)
-                .orElseThrow(() ->
-                        new NotFoundException(String.format("Project with id = %s doesn't exists", projectId))
-                );
     }
 }
